add custom css + search form

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -1,5 +1,19 @@
 <%- include("partials/header") %>
 
-<h2>Search</h2>
+
+
+<form class="col-6 row g-3 search-form">
+    <h3 class="text-center">Search</h3>
+  <div class="col-12 margin-chop">
+    <label for="inputAddress2" class="form-label">Card Name:</label>
+    <input type="text" class="form-control" id="inputAddress2" placeholder="Wrath of God...">
+  </div>
+
+    </div>
+  </div>
+  <div class="col-12">
+    <button type="submit" class="btn btn-primary">Search</button>
+  </div>
+</form>
 
 <%- include("partials/footer") %>
