search page fully functioning

--- a/views/deck.ejs
+++ b/views/deck.ejs
@@ -1,7 +1,11 @@
 <%- include("partials/header") %>
     
-<h2>Welcome</h2>
+<h2>Your Deck</h2>
 
- <img src="<%= card.img %>">
+
+   <img src="<%= card.img %>">
+
+
+
 
 <%- include("partials/footer") %>
