add card to database working

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -16,6 +16,12 @@
   </div>
 </form>
 
- <img src="<%= card.img %>">
+<form action="/addCard" method="POST">
+  <img src="<%= card.img %>">
+
+  <input type="hidden" name="card" value="<%= card.img %>">
+  <button type="submit" class="btn btn-danger">Add</button>
+</form>
+ 
 
 <%- include("partials/footer") %>
