add cancel button + edit functionality

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -21,8 +21,9 @@
   <img src="<%= card.img %>">
 
   <input type="hidden" name="card" value="<%= card.img %>">
-  <button type="submit" class="btn btn-danger">Add</button>
+  <button type="submit" class="btn btn-success">Add</button>
 </form>
+  <a href="/search"><button class="btn btn-secondary">Cancel</button></a>
  <% } %>
 
 <%- include("partials/footer") %>
