update error handling for apiCall()

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,5 +1,6 @@
 <%- include("partials/header") %>
     
-<h2>Nooooopee!</h2>
+
+<h2 class="text-center"><%= message %></h2>
 
 <%- include("partials/footer") %>
