--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+:root {
+    --background: rgb(121, 137, 253);
+}
+
 .search-form {
     border: 1px solid black;
     border-radius: 2px;
@@ -10,7 +14,7 @@
 }
 
 .heading-container {
-    background-color: rgb(165, 165, 247);
+    background-color: var(--background);
     height: 100px;
 }
 
@@ -27,13 +31,22 @@
     -webkit-text-stroke-color: black;
 }
 
-.deck-container {
-    background-color: rgb(232, 232, 232);
-    padding: 20px 0px;
-    width: 100%;
+.top-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    align-content: center;
+    background-color: var(--background);
+}
+
+.deck-container {
+    background-color: rgb(232, 232, 232);
+    padding: 20px 0px 20px 6.5%;
+    width: 95%;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    /* align-content: flex-end; */
     flex-wrap: wrap;
 }
 
