--- a/views/deck.ejs
+++ b/views/deck.ejs
@@ -1,16 +1,18 @@
 <%- include("partials/header") %>
 
-<div class="heading-container">
-      <div class="heading">Deck</div>
-</div>
+<div class="deck-page">
+      <div class="heading-container">
+            <div class="heading">Deck</div>
+      </div>
 
-<div class="top-container">
-      <div class="deck-container">
-      <% deck.forEach(function(card) { %>
+      <div class="top-container">
+            <div class="deck-container">
+            <% deck.forEach(function(card) { %>
 
-            <img class="card-image" src="<%= card.img %>">
+                  <img class="card-image" src="<%= card.img %>">
 
-      <% }); %>
+            <% }); %>
+            </div>
       </div>
 </div>
 
