increment and decrement working on all cards!

--- a/views/deck.ejs
+++ b/views/deck.ejs
@@ -10,11 +10,11 @@
             <% deck.forEach(function(card) { %>
                   <div class="card-container">
                         <img class="card-image" src="<%= card.img %>">
-                        <div class="number-container">
+                        <div class="number-container" id="<%= card._id %>">
                               <span class="number-show"><%= card.number %></span>
                               <input class="number-display" type="hidden" value="<%= card.number %>" readonly>
-                              <i onclick="plus()" class="fas fa-angle-up"></i>
-                              <i onclick="minus()" class="fas fa-angle-down"></i>
+                              <i onclick="plus('<%= card._id %>')" class="fas fa-angle-up"></i>
+                              <i onclick="minus('<%= card._id %>')" class="fas fa-angle-down"></i>
                         </div>
                         
                   </div>
