--- a/views/deck.ejs
+++ b/views/deck.ejs
@@ -3,6 +3,10 @@
 <div class="deck-page">
       <div class="heading-container">
             <div class="heading">Deck</div>
+            
+      </div>
+      <div class="dashboard-container">
+            <span class="dashboard"></span>
       </div>
 
       <div class="top-container">
