--- a/views/search.ejs
+++ b/views/search.ejs
@@ -23,21 +23,22 @@
 <div class="top-result-container">
   
 
-  <% if(card.img){ %>
+  <% if(deck){ %>
     <div class="result-container">
+      <% deck.forEach((card) => { %>
+        <img class="card-image" src="<%= card.img %>">
+        <div>
+          <form action="/addCard" method="POST">
 
-      <img class="card-image" src="<%= card.img %>">
-      <div>
-        <form action="/addCard" method="POST">
-
-          <input type="hidden" name="card" value="<%= card.img %>">
-          <input class="number-of-cards" type="text" name="number" value="1">
-          <i onclick="plusSearch('<%= card._id %>')" class="fas fa-angle-up search"></i>
-          <i onclick="minusSearch('<%= card._id %>')" class="fas fa-angle-down search"></i>
-          <button type="submit" class="btn btn-success">Add</button>
-        </form>
-          <a href="/search"><button class="btn btn-danger">Cancel</button></a>
-      </div>
+            <input type="hidden" name="card" value="<%= card.img %>">
+            <input class="number-of-cards" type="text" name="number" value="1">
+            <i onclick="plusSearch('<%= card._id %>')" class="fas fa-angle-up search"></i>
+            <i onclick="minusSearch('<%= card._id %>')" class="fas fa-angle-down search"></i>
+            <button type="submit" class="btn btn-success">Add</button>
+          </form>
+            <a href="/search"><button class="btn btn-danger">Cancel</button></a>
+        </div>
+      <% }) %>
     </div>
   <% } %>
 
