--- a/views/deck.ejs
+++ b/views/deck.ejs
@@ -21,7 +21,7 @@
                                     <input type="hidden" name="card" value="<%= card.img %>">
                                     <i onclick="plus('<%= card._id %>')" class="fas fa-angle-up"></i>
                                     <i onclick="minus('<%= card._id %>')" class="fas fa-angle-down"></i>
-                                    <input type="submit" value="update" class="delete-button" href="/delete"></input>
+                                    <input type="submit" value="update" class="update-button" href="/delete"></input>
                               </form>
                         </div>
                         
