cards wrapping on search page, update deck page styling

--- a/views/search.ejs
+++ b/views/search.ejs
@@ -17,7 +17,7 @@
 </form>
 
 <% if(message){ %>
-  <h2 class="text-center"><%= message %></h2>
+  <h2 class="text-center message"><%= message %></h2>
 <% } %>
 
 <div class="top-result-container">
