--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,7 @@
 :root {
     --background: rgb(121, 137, 253);
-    --light-grey: rgb(232, 232, 232);
+    --light-grey: rgb(255, 255, 255);
+    --card-board: rgb(205, 205, 205);
 }
 
 /* Deck Page */
@@ -45,6 +46,7 @@ body {
     margin: auto;
     padding: 1px 4px;
     font-size: 16px;
+    border-radius: 1px;
 }
 
 .top-container {
@@ -56,7 +58,7 @@ body {
 }
 
 .deck-container {
-    background-color: var(--light-grey);
+    background-color: var(--card-board);
     border-radius: 3px;
     padding: 20px 0px 20px 6.5%;
     width: 95%;
@@ -67,6 +69,7 @@ body {
 }
 
 .card-container {
+    background-color: var(--light-grey);
     margin: 5px 5px;
     border: 1px solid black;
     border-radius: 3px;
@@ -139,11 +142,10 @@ body {
 
 .top-result-container {
     /* background-color: magenta; */
-    width: fit-content;
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    flex-wrap: nowrap;
 }
 
 .result-container {
@@ -154,7 +156,7 @@ body {
     border-radius: 3px;
     display: flex;
     justify-content: center;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
 }
 
 div.result-container form {
@@ -199,5 +201,5 @@ div.result-container button {
     background-color: var(--light-grey);
     border: 1px solid black;
     border-radius: 2px;
-    margin: 0px 10px;
+    margin: 20px 10px 0px 10px;
 }
